Fixing collapsing when click outside of currency selection

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -520,6 +520,5 @@
   height: 200px;
   background-color: white;
   border: 0.5px solid rgba(170, 170, 170, 0.637);
-  display: none;
 }
 
